--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "blog",
+  "version": "1.0.0",
   "repository": {},
   "license": "MIT",
   "scripts": {
@@ -10,11 +12,14 @@
     "phoenix_html": "file:deps/phoenix_html"
   },
   "devDependencies": {
-    "babel-brunch": "~6.0.0",
-    "brunch": "2.7.4",
-    "clean-css-brunch": "~2.0.0",
-    "css-brunch": "~2.0.0",
-    "javascript-brunch": "~2.0.0",
-    "uglify-js-brunch": "~2.0.1"
+    "file-loader": "^0.10.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
+    "ts-loader": "^2.0.1",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1",
+    "webpack-hot-middleware": "^2.17.1"
   }
 }
