--- a/package.json
+++ b/package.json
@@ -9,17 +9,24 @@
   },
   "dependencies": {
     "phoenix": "file:deps/phoenix",
-    "phoenix_html": "file:deps/phoenix_html"
-  },
-  "devDependencies": {
-    "file-loader": "^0.10.1",
+    "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-toolbox": "^2.0.0-beta.7"
+  },
+  "devDependencies": {
+    "@types/react": "^15.0.16",
+    "@types/react-dom": "^0.14.23",
+    "cors": "^2.8.1",
+    "css-loader": "^0.27.1",
+    "express": "^4.15.2",
+    "file-loader": "^0.10.1",
     "react-hot-loader": "^1.3.1",
+    "style-loader": "^0.13.2",
     "ts-loader": "^2.0.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1",
+    "webpack-dev-middleware": "^1.10.1",
     "webpack-hot-middleware": "^2.17.1"
   }
 }
