--- a/package.json
+++ b/package.json
@@ -8,20 +8,22 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "office-ui-fabric-react": "^2.2.1",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-toolbox": "^2.0.0-beta.7"
+    "react-router-dom": "^4.0.0"
   },
   "devDependencies": {
     "@types/react": "^15.0.16",
     "@types/react-dom": "^0.14.23",
+    "@types/react-hot-loader": "^3.0.1",
     "cors": "^2.8.1",
     "css-loader": "^0.27.1",
     "express": "^4.15.2",
     "file-loader": "^0.10.1",
-    "react-hot-loader": "^1.3.1",
+    "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.13.2",
     "ts-loader": "^2.0.1",
     "url-loader": "^0.5.8",
