--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "csstips": "^0.2.0",
+    "history": "^4.6.1",
     "office-ui-fabric-react": "^2.5.1",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router-dom": "^4.0.0"
+    "react-router-dom": "^4.0.0",
+    "typestyle": "^1.2.1"
   },
   "devDependencies": {
+    "@types/history": "^4.5.0",
     "@types/react": "^15.0.16",
     "@types/react-dom": "^0.14.23",
     "@types/react-hot-loader": "^3.0.1",
