--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "csstips": "^0.2.0",
     "history": "^4.6.1",
+    "meng": "^3.1.13",
     "office-ui-fabric-react": "^2.5.1",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
+    "rxjs": "^5.2.0",
     "typestyle": "^1.2.1"
   },
   "devDependencies": {
