--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "rxjs": "^5.2.0",
     "typestyle": "^1.2.1"
