--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "dependencies": {
     "csstips": "^0.2.0",
     "history": "^4.6.1",
-    "meng": "^3.1.15",
+    "meng": "^3.2.0",
     "office-ui-fabric-react": "^2.5.1",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-iscroller": "^1.0.7",
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "rxjs": "^5.2.0",
@@ -23,7 +24,7 @@
   },
   "devDependencies": {
     "@types/history": "^4.5.0",
-    "@types/react": "^15.0.16",
+    "@types/react": "^15.0.20",
     "@types/react-dom": "^0.14.23",
     "@types/react-hot-loader": "^3.0.1",
     "cors": "^2.8.1",
