--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router": "^4.0.0",
     "react-router-dom": "^4.0.0",
     "rxjs": "^5.2.0",
+    "typescript": "^2.2.2",
     "typestyle": "^1.2.1"
   },
   "devDependencies": {
