--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "style-loader": "^0.13.2",
     "ts-loader": "^2.0.1",
+    "uglifyjs-webpack-plugin": "^0.3.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-middleware": "^1.10.1",
