--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "watch": "brunch watch --stdin"
   },
   "dependencies": {
+    "@types/phoenix": "0.0.4",
     "csstips": "^0.2.0",
     "firebase": "^3.7.4",
     "history": "^4.6.1",
-    "meng": "^3.2.0",
+    "meng": "^3.2.1",
     "office-ui-fabric-react": "^2.5.1",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
