--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
+    "strict": true,
     "experimentalDecorators": true,
     "module": "commonjs",
     "target": "es6",
     "jsx": "react",
-    "noImplicitAny": true,
-    "strictNullChecks": true,
     "sourceMap": false,
     "skipLibCheck": true
   },
